--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,6 +9,9 @@ jobs:
   deploy:
     runs-on: ubuntu-18.04
     steps:
+      - name: config
+        run: git config --global url."https://meganii:${{ secrets.GITHUB_TOKEN }}@github.com".insteadOf  "https://github.com"
+      
       - uses: actions/checkout@v2
         with:
           submodules: true  # Fetch Hugo themes
